// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates visualization widget 1`] = `
Object {
  "@widget/id": Object {
    "data": null,
    "error": null,
    "isActive": false,
    "isConfigured": false,
    "isDetached": false,
    "isFadeOut": false,
    "isHighlighted": false,
    "isInitialized": false,
    "isLoading": false,
    "isTitleCover": false,
    "widget": Object {
      "datePickerId": null,
      "filterIds": Array [],
      "id": "@widget/id",
      "position": Object {
        "h": 2,
        "w": 4,
        "x": 1,
        "y": 2,
      },
      "query": null,
      "settings": Object {
        "chartSettings": Object {},
        "visualizationType": null,
        "widgetSettings": Object {},
      },
      "type": "visualization",
    },
  },
}
`;

exports[`finishes visualization widget configuration 1`] = `
Object {
  "data": null,
  "error": null,
  "isActive": false,
  "isConfigured": true,
  "isDetached": false,
  "isFadeOut": false,
  "isHighlighted": false,
  "isInitialized": false,
  "isLoading": false,
  "isTitleCover": false,
  "widget": Object {
    "datePickerId": null,
    "filterIds": Array [],
    "id": "@widget/id",
    "position": Object {
      "h": 2,
      "w": 6,
      "x": 3,
      "y": 2,
    },
    "query": "purchases",
    "settings": Object {
      "chartSettings": Object {
        "layout": "vertical",
      },
      "visualizationType": "bar",
      "widgetSettings": Object {},
    },
    "type": "visualization",
  },
}
`;

exports[`save cloned widget 1`] = `
Object {
  "@widget/id": Object {
    "data": null,
    "error": null,
    "isActive": false,
    "isConfigured": false,
    "isDetached": false,
    "isFadeOut": false,
    "isHighlighted": false,
    "isInitialized": false,
    "isLoading": false,
    "isTitleCover": false,
    "widget": Object {
      "datePickerId": null,
      "filterIds": Array [],
      "id": "@widget/id",
      "position": Object {
        "h": 2,
        "w": 6,
        "x": 3,
        "y": 2,
      },
      "query": null,
      "settings": Object {
        "chartSettings": Object {},
        "visualizationType": null,
        "widgetSettings": Object {},
      },
      "type": "visualization",
    },
  },
}
`;
